crates/agent/src/integration_tests/graphql/mutations/snapshots/agent__integration_tests__graphql__mutations__discovers__connector-failure-errors.snap
---
source: crates/agent/src/integration_tests/graphql/mutations/discovers.rs
expression: result.errors
---
[
    (
        "flow://capture/aliceCo/e2e/capture",
        "the connector could not reach the endpoint",
    ),
]
